--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p class="color:#1abc9c;">Merhaba Dünya</p>
+<p style="color:#1abc9c;">Merhaba Dünya</p>
 </body>
 </html>
