--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
+<body style="color:#1abc9c;">
 <h1>Hello World</h1>
-<p style="color:#1abc9c;">Merhaba Dünya</p>
+<p >Merhaba Dünya</p>
 </body>
 </html>
