--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body style="color:#1abc9c;">
-<h1>Hello World</h1>
-<p >Merhaba Dünya</p>
+<div id="bas">
+</div>
+<div id="govde">
+  <p >Merhaba Dünya</p>
+</div>
+<div id="ayak">
+</div>
 </body>
 </html>
