--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+<head>
+<link rel="stylesheet" href="css/style.css">
+</head>
 <body style="color:#1abc9c;">
 <div id="bas">
 </div>
