--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
+<title> Mahir Atmış</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body style="color:#1abc9c;">
 <div id="bas">
 </div>
 <div id="govde">
-  <p >Merhaba Dünya</p>
+  <div id="dersler">
+    <a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş</a>
+  </div>
 </div>
 <div id="ayak">
+<p><strong>Email:</strong> <a href="mailto:atmismahir@gmail.com">atmismahir@gmail.com</a><br>
+<strong>Tel:</strong> +90 226 815 5360<br>
+<strong>Ofis:</strong> C Blok, Oda No:5<br>
+<strong>Adres:</strong><br>
+Yalova Üniversitesi Merkezi Yerleşkesi<br>
+Endüstri Mühendisliği Bölümü<br>
+Yalova, Türkiye</p>  
 </div>
 </body>
 </html>
