--- a/index.html
+++ b/index.html
@@ -9,10 +9,13 @@
 </div>
 <div id="govde">
   <div id="dersler">
+    <h1> Dersler</h1>
     <a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş</a>
   </div>
 </div>
 <div id="ayak">
+  <hr>
+ <h1> İletişim </h1> 
 <p><strong>Email:</strong> <a href="mailto:atmismahir@gmail.com">atmismahir@gmail.com</a><br>
 <strong>Tel:</strong> +90 226 815 5360<br>
 <strong>Ofis:</strong> C Blok, Oda No:5<br>
