--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
     <a href="bilg_prog_giris.html"> Bilgisayar Programlamaya Giriş</a>
   </div>
 </div>
+<div id="bos_satir">
+</div>
 <div id="ayak">
-  <hr>
- <h1> İletişim </h1> 
-<p><strong>Email:</strong> <a href="mailto:atmismahir@gmail.com">atmismahir@gmail.com</a><br>
-<strong>Tel:</strong> +90 226 815 5360<br>
-<strong>Ofis:</strong> C Blok, Oda No:5<br>
-<strong>Adres:</strong><br>
-Yalova Üniversitesi Merkezi Yerleşkesi<br>
-Endüstri Mühendisliği Bölümü<br>
-Yalova, Türkiye</p>  
+  <h1> İletişim </h1> 
+  <p>
+    <strong>Email:</strong>
+      <a href="mailto:atmismahir@gmail.com">atmismahir@gmail.com</a><br>
+    <strong>Tel:</strong> +90 226 815 5360<br>
+    <strong>Ofis:</strong> C Blok, Oda No:5<br>
+    <strong>Adres:</strong><br>
+    Yalova Üniversitesi Merkezi Yerleşkesi<br>
+    Endüstri Mühendisliği Bölümü<br>
+    Yalova, Türkiye
+  </p>  
 </div>
 </body>
 </html>
