--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title ="Bilgisayar Programlamaya Giriş">
+<title>"Bilgisayar Programlamaya Giriş"></title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body style="color:#1abc9c;">
