--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -16,5 +16,19 @@
 </div>
 <div id="ayak">
 </div>
+
+<!-- Akordeon Menu -->
+<script>
+var acc = document.getElementsByClassName("accordion");
+var i;
+
+for (i = 0; i < acc.length; i++) {
+    acc[i].onclick = function(){
+        this.classList.toggle("active");
+        this.nextElementSibling.classList.toggle("show");
+  }
+}
+</script>  
+  
 </body>
 </html>
