--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -9,6 +9,18 @@
 </div>
 <div id="govde">
   <div id="ornekler">
+    <button class="accordion">Merhaba Dünya</button>
+    <div class="panel">
+      <p>
+      <div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
+        <pre style="margin: 0; line-height: 125%"><span style="color: #BC7A00">#include&lt;stdio.h&gt;</span>
+main()
+{
+    printf(<span style="color: #BA2121">&quot;Merhaba Dünya&quot;</span>);
+}
+</pre></div>     
+      </p>
+    </div>    
   </div>
   <hr />
   <div id="kaynaklar">
