--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -1,48 +1,59 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>"Bilgisayar Programlamaya Giriş"></title>
-<link rel="stylesheet" href="style.css">
+	<title>"Bilgisayar Programlamaya Giriş"></title>
+	<link rel="stylesheet" href="style.css">
 </head>
 <body style="color:#1abc9c;">
-<div id="bas">
-</div>
-<div id="govde">
-  <div id="ornekler">
-    <button class="accordion">1.Merhaba Dünya</button>
-    <div class="panel">
-      <p>
-        <div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
-        <pre style="margin: 0; line-height: 125%">
-        <span style="color: #BC7A00">#include&lt;stdio.h&gt;</span>
-        main()
-        {
-          printf(<span style="color: #BA2121">&quot;Merhaba Dünya&quot;</span>);
-        }
-        </pre>
-        </div>     
-      </p>
-    </div>    
-  </div>
-  <hr />
-  <div id="kaynaklar">
-  </div>
-</div>
-<div id="ayak">
-</div>
+	<div id="bas">
+	</div>
+	<div id="govde">
+		<div id="kaynaklar">
+		<h1>
+			<a href="https://www.youtube.com/watch?v=w2GLDhLt66I"> CodeBlocks İndirme ve Kurulumu</a>
+		</h1>
+		<h1>Yararlanabileceğiniz Kaynaklar</h1>
+		<h2> Web Siteleri </h2>
+		<p>
+			<ul>
+				<li><a href="http://www.cagataycebi.com/programming/"> http://www.cagataycebi.com/programming/ </a></li>
+				<li><a href="http://www.cagataycebi.com/programming/"> http://www.cagataycebi.com/programming/ </a></li>
+			</ul>
+		</p>
+		</div>
+		<div id="ornekler">
+			<h1>Örnek Programlar</h1>
+			<button class="accordion">1.Merhaba Dünya</button>
+			<div class="panel">
+				<p>
+					<div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
+					<pre style="margin: 0; line-height: 125%">
+					<span style="color: #BC7A00">#include&lt;stdio.h&gt;</span>
+					main()
+					{
+						printf(<span style="color: #BA2121">&quot;Merhaba Dünya&quot;</span>);
+					}
+					</pre>
+					</div>     
+				</p>
+			</div>    
+		</div>
+		<hr />
+	</div>
+	<div id="ayak">
+	</div>
 
-<!-- Akordeon Menu -->
-<script>
-var acc = document.getElementsByClassName("accordion");
-var i;
+	<!-- Akordeon Menu -->
+	<script>
+		var acc = document.getElementsByClassName("accordion");
+		var i;
 
-for (i = 0; i < acc.length; i++) {
-    acc[i].onclick = function(){
-        this.classList.toggle("active");
-        this.nextElementSibling.classList.toggle("show");
-  }
-}
-</script>  
-  
+		for (i = 0; i < acc.length; i++) {
+				acc[i].onclick = function(){
+						this.classList.toggle("active");
+						this.nextElementSibling.classList.toggle("show");
+			}
+		}
+	</script>    
 </body>
 </html>
