--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -9,20 +9,21 @@
 	</div>
 	<div id="govde">
 		<div id="kaynaklar">
-		<h1>
-			<a href="https://www.youtube.com/watch?v=w2GLDhLt66I"> CodeBlocks İndirme ve Kurulumu</a>
-		</h1>
-		<h1>Yararlanabileceğiniz Kaynaklar</h1>
-		<h2> Web Siteleri </h2>
+		<h2>
+			<a href="https://www.youtube.com/watch?v=w2GLDhLt66I" target="_blank"> CodeBlocks İndirme ve Kurulumu</a>
+		</h2>
+		<h2>Yararlanabileceğiniz Kaynaklar</h2>
+		<h3> Web Siteleri </h3>
 		<p>
 			<ul>
-				<li><a href="http://www.cagataycebi.com/programming/"> http://www.cagataycebi.com/programming/ </a></li>
-				<li><a href="http://www.cagataycebi.com/programming/"> http://www.cagataycebi.com/programming/ </a></li>
+				<li><a href="http://www.cagataycebi.com/programming/"> C Dili Dersleri (Çağatay Çebi) </a></li>
+				<li><a href="https://www.youtube.com/playlist?list=PLfzhcDNz4tlXOvEE7z_u3gEqFO3nwIZ5i"> C Dili Dersleri (Volkan Kılıç) </a></li>
+				<li><a href="https://www.youtube.com/watch?v=TNGv84fufNk"> CodeBlocks ile Çeşitli Örnekler </a></li>				
 			</ul>
 		</p>
 		</div>
 		<div id="ornekler">
-			<h1>Örnek Programlar</h1>
+			<h2>Örnek Programlar</h2>
 			<button class="accordion">1.Merhaba Dünya</button>
 			<div class="panel">
 				<p>
