--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -10,15 +10,15 @@
 	<div id="govde">
 		<div id="kaynaklar">
 		<h2>
-			<a href="https://www.youtube.com/watch?v=w2GLDhLt66I" target="_blank"> CodeBlocks İndirme ve Kurulumu</a>
+			<a href="https://www.youtube.com/watch?v=w2GLDhLt66I" target="_new"> CodeBlocks İndirme ve Kurulumu</a>
 		</h2>
 		<h2>Yararlanabileceğiniz Kaynaklar</h2>
 		<h3> Web Siteleri </h3>
 		<p>
 			<ul>
-				<li><a href="http://www.cagataycebi.com/programming/"> C Dili Dersleri (Çağatay Çebi) </a></li>
-				<li><a href="https://www.youtube.com/playlist?list=PLfzhcDNz4tlXOvEE7z_u3gEqFO3nwIZ5i"> C Dili Dersleri (Volkan Kılıç) </a></li>
-				<li><a href="https://www.youtube.com/watch?v=TNGv84fufNk"> CodeBlocks ile Çeşitli Örnekler </a></li>				
+				<li><a href="http://www.cagataycebi.com/programming/" target="_new"> C Dili Dersleri (Çağatay Çebi) </a></li>
+				<li><a href="https://www.youtube.com/playlist?list=PLfzhcDNz4tlXOvEE7z_u3gEqFO3nwIZ5i" target="_new"> C Dili Dersleri (Volkan Kılıç) </a></li>
+				<li><a href="https://www.youtube.com/watch?v=TNGv84fufNk" target="_new"> CodeBlocks ile Çeşitli Örnekler </a></li>				
 			</ul>
 		</p>
 		</div>
@@ -26,6 +26,7 @@
 			<h2>Örnek Programlar</h2>
 			<button class="accordion">1.Merhaba Dünya</button>
 			<div class="panel">
+			  <div id="code">
 				<p>
 					<div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
 					<pre style="margin: 0; line-height: 125%">
@@ -37,6 +38,11 @@
 					</pre>
 					</div>     
 				</p>
+				</div>
+				<div id="result">
+				<h2> Ekran Çıktısı</h2>
+				<p> Merhaba Dünya </p>
+				</div>
 			</div>    
 		</div>
 		<hr />
