--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -24,8 +24,11 @@
 		</div>
 		<div id="ornekler">
 			<h2>Örnek Programlar</h2>
-			<button class="accordion">1.Merhaba Dünya</button>
+			<button class="accordion">1.Merhaba Dunya</button>
 			<div class="panel">
+				<div id="problem_tanimi">
+				<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
+				</div>
 			  <div id="code">
 				<p>
 					<div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
@@ -33,7 +36,7 @@
 					<span style="color: #BC7A00">#include&lt;stdio.h&gt;</span>
 					main()
 					{
-						printf(<span style="color: #BA2121">&quot;Merhaba Dünya&quot;</span>);
+						printf(<span style="color: #BA2121">&quot;Merhaba Dunya&quot;</span>);
 					}
 					</pre>
 					</div>     
@@ -41,7 +44,7 @@
 				</div>
 				<div id="result">
 				<h2> Ekran Çıktısı</h2>
-				<p> Merhaba Dünya </p>
+				<p> Merhaba Dunya </p>
 				</div>
 			</div>    
 		</div>
