--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -27,6 +27,7 @@
 			<button class="accordion">1.Merhaba Dunya</button>
 			<div class="panel">
 				<div id="problem_tanimi">
+				<h2> Problem Tanımı </h2>
 				<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
 				</div>
 			  <div id="code">
