--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -26,11 +26,11 @@
 			<h2>Örnek Programlar</h2>
 			<button class="accordion">1.Merhaba Dunya</button>
 			<div class="panel">
-				<div id="problem_tanimi">
+				<div class="problem_tanimi">
 				<h2> Problem Tanımı </h2>
 				<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
 				</div>
-			  <div id="code">
+			  <div class="code">
 				<p>
 					<div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
 					<pre style="margin: 0; line-height: 125%">
@@ -43,7 +43,7 @@
 					</div>     
 				</p>
 				</div>
-				<div id="result">
+				<div class="result">
 				<h2> Ekran Çıktısı</h2>
 				<p> Merhaba Dunya </p>
 				</div>
