--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -3,6 +3,7 @@
 <head>
 	<title>"Bilgisayar Programlamaya Giriş"></title>
 	<link rel="stylesheet" href="style.css">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body style="color:#1abc9c;">
 	<div id="bas">
@@ -26,13 +27,14 @@
 			<h2>Örnek Programlar</h2>
 			<button class="accordion">1.Merhaba Dunya</button>
 			<div class="panel">
-				<div class="problem_tanimi">
-				<h2> Problem Tanımı </h2>
+			<h3> Problem Tanımı </h3>
+				<div class="problem_tanimi">				
 				<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
 				</div>
 			  <div class="code">
-					<div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;">
-					<pre style="margin: 0; line-height: 125%">
+				<h3> C Kodu </h3>
+					<div style="background: #f8f8f8;">
+					<pre style="margin:0; line-height: 125%">
 <span style="color: #BC7A00">#include&lt;stdio.h&gt;</span>
 main()
 {
@@ -41,13 +43,16 @@ main()
 					</pre>
 					</div>     
 				</div>
+				
 				<div class="result">
-				<h2> Ekran Çıktısı</h2>
+				<h3> Ekran Çıktısı</h3>
+				<pre> 				
 				<p> Merhaba Dunya </p>
+				</pre> 
 				</div>
 			</div>    
 		</div>
-		<hr />
+
 	</div>
 	<div id="ayak">
 	</div>
