--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title> Mahir Atmış</title>
 <link rel="stylesheet" href="style.css">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 </head>
 <body style="color:#1abc9c;">
 <div id="bas">
