--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -11,7 +11,7 @@
 	<div id="govde">
 		<div id="kaynaklar">
 		<h2>
-			<a href="https://www.youtube.com/watch?v=w2GLDhLt66I" target="_new"> CodeBlocks İndirme ve Kurulumu</a>
+			<a href="https://www.youtube.com/watch?v=oeIq0Nmzy6Y" target="_new"> CodeBlocks İndirme ve Kurulumu</a>
 		</h2>
 		<h2>Yararlanabileceğiniz Kaynaklar</h2>
 		<h3> Web Siteleri </h3>
@@ -27,9 +27,9 @@
 			<h2>Örnek Programlar</h2>
 			<button class="accordion">1.Merhaba Dunya</button>
 			<div class="panel">
-			<h3> Problem Tanımı </h3>
-				<div class="problem_tanimi">				
-				<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
+				<div class="problem_tanimi">	
+					<h3> Problem Tanımı </h3>				
+					<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
 				</div>
 			  <div class="code">
 				<h3> C Kodu </h3>
