--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -9,21 +9,41 @@
 	<div id="bas">
 	</div>
 	<div id="govde">
-		<div id="kaynaklar">
-		<h2>
-			<a href="https://www.youtube.com/watch?v=oeIq0Nmzy6Y" target="_new"> CodeBlocks İndirme ve Kurulumu</a>
-		</h2>
-		<h2>Yararlanabileceğiniz Kaynaklar</h2>
-		<h3> Web Siteleri </h3>
-		<p>
-			<ul>
-				<li><a href="http://www.cagataycebi.com/programming/" target="_new"> C Dili Dersleri (Çağatay Çebi) </a></li>
-				<li><a href="https://www.youtube.com/playlist?list=PLfzhcDNz4tlXOvEE7z_u3gEqFO3nwIZ5i" target="_new"> C Dili Dersleri (Volkan Kılıç) </a></li>
-				<li><a href="https://www.youtube.com/watch?v=TNGv84fufNk" target="_new"> CodeBlocks ile Çeşitli Örnekler </a></li>				
-			</ul>
-		</p>
+		<div class="left">
+			<div id="kaynaklar">
+			<h2>
+				<a href="https://www.youtube.com/watch?v=oeIq0Nmzy6Y" target="_new"> CodeBlocks İndirme ve Kurulumu</a>
+			</h2>
+			<h2>Yararlanabileceğiniz Kaynaklar</h2>
+			<h3> Web Siteleri Türkçe</h3>
+			<p>
+				<ul>
+					<li><a href="http://www.cagataycebi.com/programming/" target="_new"> C Dili Dersleri (Çağatay Çebi) </a></li>
+					<li><a href="https://www.youtube.com/playlist?list=PLfzhcDNz4tlXOvEE7z_u3gEqFO3nwIZ5i" target="_new"> C Dili Dersleri (Volkan Kılıç) </a></li>
+					<li><a href="https://www.youtube.com/watch?v=TNGv84fufNk" target="_new"> CodeBlocks ile Çeşitli Örnekler </a></li>				
+				</ul>
+			</p>
+			<h3> Web Siteleri İngilizce</h3>
+			<p>
+				<ul>
+					<li><a href="http://www.learn-c.org/" target="_new"> Learn C </a></li>
+					<li><a href="https://www.tutorialspoint.com/cprogramming/index.htm" target="_new"> Tutorials Point </a></li>
+					<li><a href="http://www.cprogramming.com/tutorial/c-tutorial.html" target="_new"> C Programming </a></li>		
+				</ul>
+			</p>
+
+			<h3> İngilizce Kitap</h3>
+			<p>The C Programming Language 2nd Edition. Brian W. Kernighan, Dennis M. Ritchie</p>
+
+			</div>
 		</div>
-		<div id="ornekler">
+		<div class="right">
+			<div style="border:1px solid #39c; width:304px;">
+			<img src="dennis_ritchie.jpg" alt="Dennis M. Ritchie" style="width:304px;height:300px;">
+			<h4>&nbsp;C Dili Yazarı <a href="https://en.wikipedia.org/wiki/Dennis_Ritchie" target="_new">Dennis M. Ritchie</a></h4>
+			</div>
+		</div>
+		<div class="ornekler">
 			<h2>Örnek Programlar</h2>
 			<button class="accordion">1.Merhaba Dunya</button>
 			<div class="panel">
@@ -31,32 +51,88 @@
 					<h3> Problem Tanımı </h3>				
 					<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
 				</div>
-			  <div class="code">
-				<h3> C Kodu </h3>
-					<div style="background: #f8f8f8;">
-					<pre style="margin:0; line-height: 125%">
-<span style="color: #BC7A00">#include&lt;stdio.h&gt;</span>
-main()
-{
-	printf(<span style="color: #BA2121">&quot;Merhaba Dunya&quot;</span>);
-}
-					</pre>
-					</div>     
-				</div>
-				
-				<div class="result">
-				<h3> Ekran Çıktısı</h3>
-				<pre> 				
-				<p> Merhaba Dunya </p>
-				</pre> 
-				</div>
-			</div>    
-		</div>
+				<div class="code">
+<!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #408080; font-style: italic">/* Yorumlarınızı buraya yazabilirsiniz</span>
 
+<span style="color: #408080; font-style: italic">   h uzantılı dosyalar başlık(header) dosyalarıdır.</span>
+<span style="color: #408080; font-style: italic">   içlerinde çeşitli tanımlamalar bulunur.</span>
+<span style="color: #408080; font-style: italic">   stdio.h dosyasında aşağıda kullandığımız printf fonksiyonu tanımlıdır.</span>
+<span style="color: #408080; font-style: italic">   #include komutu ile stdio.h dosyasında herkesin kullanımına açık</span>
+<span style="color: #408080; font-style: italic">   olan tanımlamaları bizim programın kullanmasını sağlıyoruz */</span>
+<span style="color: #BC7A00">#include &lt;stdio.h&gt;</span>
+
+<span style="color: #408080; font-style: italic">/* Program çalışmaya main fonksiyonunun içinden başlar*/</span>
+<span style="color: #B00040">int</span> <span style="color: #0000FF">main</span>()
+{ <span style="color: #408080; font-style: italic">// fonksiyon bloğu başlama</span>
+    <span style="color: #408080; font-style: italic">/* printf ekrana mesaj yazmak için kullanılır*/</span>
+    printf(<span style="color: #BA2121">&quot;Merhaba Dunya&quot;</span>);
+    <span style="color: #408080; font-style: italic">/* main fonksiyonu çalışmasını sorunsuz bir şekilde bitirdiğinde</span>
+<span style="color: #408080; font-style: italic">       yaygın olarak 0 döndürür*/</span>
+    <span style="color: #008000; font-weight: bold">return</span> <span style="color: #666666">0</span>;
+} <span style="color: #408080; font-style: italic">// fonksiyon bloğu bitiş</span>
+</pre></div>    
+				</div>				
+				<div class="result">
+					<h3> Ekran Çıktısı</h3>
+					<pre> 				
+					<p> Merhaba Dunya </p>
+					</pre> 
+				</div>
+			</div>
+			<button class="accordion">2.Özel Karakterler</button>
+			<div class="panel">
+				<div class="problem_tanimi">	
+					<h3> Problem Tanımı </h3>				
+					<p> Ekrana özel karakterleri yazdırmak</p>
+				</div>
+				<div class="code">
+					<h3> C Kodu </h3>
+<!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #BC7A00">#include &lt;stdio.h&gt;</span>
+
+<span style="color: #B00040">int</span> <span style="color: #0000FF">main</span>()
+{   <span style="color: #408080; font-style: italic">// \n  karakterinden sonra ekranda bir alt satıra geçilir</span>
+    printf(<span style="color: #BA2121">&quot;Merhaba</span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">Dunya</span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
+    <span style="color: #408080; font-style: italic">// \a  karakteri bilgisayarda alarm sesi çıkmasını sağlar</span>
+    printf(<span style="color: #BA2121">&quot;Islem bitti</span><span style="color: #BB6622; font-weight: bold">\n\a</span><span style="color: #BA2121">&quot;</span>);
+    <span style="color: #408080; font-style: italic">// \t  ekranda yatay olarak bir tab boşluk bırakır</span>
+    printf(<span style="color: #BA2121">&quot;Merhaba</span><span style="color: #BB6622; font-weight: bold">\t</span><span style="color: #BA2121">Dunya</span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
+    <span style="color: #408080; font-style: italic">// \v  ekranda dikey olarak bir tab boşluk bırakır</span>
+    printf(<span style="color: #BA2121">&quot;Merhaba</span><span style="color: #BB6622; font-weight: bold">\v</span><span style="color: #BA2121">Dunya</span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
+    <span style="color: #408080; font-style: italic">// \&quot;  ekranda çift tırnak karakterini yazabilmemizi sağlar</span>
+    printf(<span style="color: #BA2121">&quot;Merhaba </span><span style="color: #BB6622; font-weight: bold">\&quot;</span><span style="color: #BA2121">Dunya</span><span style="color: #BB6622; font-weight: bold">\&quot;</span><span style="color: #BA2121"> </span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
+    <span style="color: #408080; font-style: italic">// \?  ekranda soru işareti karakterini yazabilmemizi sağlar</span>
+    printf(<span style="color: #BA2121">&quot;Merhaba, Nasılsın\? </span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
+    <span style="color: #408080; font-style: italic">// \&#39;  ekranda tek tırnak karakterini yazabilmemizi sağlar</span>
+    printf(<span style="color: #BA2121">&quot;Merhaba, </span><span style="color: #BB6622; font-weight: bold">\&#39;</span><span style="color: #BA2121">Dunya</span><span style="color: #BB6622; font-weight: bold">\&#39;</span><span style="color: #BA2121"> </span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
+    <span style="color: #408080; font-style: italic">// \\  ekranda ters bölü karakterini yazabilmemizi sağlar</span>
+    printf(<span style="color: #BA2121">&quot;Merkez</span><span style="color: #BB6622; font-weight: bold">\\</span><span style="color: #BA2121">YALOVA&quot;</span>);
+
+    <span style="color: #008000; font-weight: bold">return</span> <span style="color: #666666">0</span>;
+}
+</pre></div>
+				</div>				
+				<div class="result">
+					<h3> Ekran Çıktısı</h3>
+					<pre> 				
+					<p> </p>
+					</pre> 
+				</div>
+			</div>      
+		</div>
 	</div>
+
+
+
+
+
+
+
+
+
+
+
 	<div id="ayak">
 	</div>
-
 	<!-- Akordeon Menu -->
 	<script>
 		var acc = document.getElementsByClassName("accordion");
