--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -101,7 +101,7 @@
     <span style="color: #408080; font-style: italic">// \&quot;  ekranda çift tırnak karakterini yazabilmemizi sağlar</span>
     printf(<span style="color: #BA2121">&quot;Merhaba </span><span style="color: #BB6622; font-weight: bold">\&quot;</span><span style="color: #BA2121">Dunya</span><span style="color: #BB6622; font-weight: bold">\&quot;</span><span style="color: #BA2121"> </span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
     <span style="color: #408080; font-style: italic">// \?  ekranda soru işareti karakterini yazabilmemizi sağlar</span>
-    printf(<span style="color: #BA2121">&quot;Merhaba, Nasılsın\? </span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
+    printf(<span style="color: #BA2121">&quot;Merhaba, Nasilsin\? </span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
     <span style="color: #408080; font-style: italic">// \&#39;  ekranda tek tırnak karakterini yazabilmemizi sağlar</span>
     printf(<span style="color: #BA2121">&quot;Merhaba, </span><span style="color: #BB6622; font-weight: bold">\&#39;</span><span style="color: #BA2121">Dunya</span><span style="color: #BB6622; font-weight: bold">\&#39;</span><span style="color: #BA2121"> </span><span style="color: #BB6622; font-weight: bold">\n</span><span style="color: #BA2121">&quot;</span>);
     <span style="color: #408080; font-style: italic">// \\  ekranda ters bölü karakterini yazabilmemizi sağlar</span>
@@ -114,7 +114,15 @@
 				<div class="result">
 					<h3> Ekran Çıktısı</h3>
 					<pre> 				
-					<p> </p>
+					<p>Merhaba
+Dunya
+Islem bitti
+Merhaba Dunya
+Merhaba		Dunya
+Merhaba "Dunya"
+Merhaba, Nasilsin?
+Merhaba, 'Dunya'
+Merkez\YALOVA </p>
 					</pre> 
 				</div>
 			</div>      
