--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -122,19 +122,82 @@ Merhaba, 'Dunya'
 Merkez\YALOVA </p>
 					</pre> 
 				</div>
+			</div>   
+
+<button class="accordion">3. Değişken Tanımlama</button>
+			<div class="panel">
+				<div class="problem_tanimi">	
+					<h3> Problem Tanımı </h3>				
+					<p> Farklı Türlerde değişken tanımlama </p>
+				</div>
+				<div class="code">
+					<h3> C Kodu </h3>
+<!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #BC7A00">#include &lt;stdio.h&gt;</span>
+
+<span style="color: #408080; font-style: italic">/* Değişkenler içerisinde değer sakladığımız bellek birimleridir.</span>
+<span style="color: #408080; font-style: italic">   Değişken tanımlarken dikkat edilmesi gerekenler</span>
+<span style="color: #408080; font-style: italic">   1. Türkçe karakter kullanmayın</span>
+<span style="color: #408080; font-style: italic">   2. Değişken adına rakamla başlamayın</span>
+<span style="color: #408080; font-style: italic">   3. Değişken adlarında boşluk kullanmayın</span>
+<span style="color: #408080; font-style: italic">*/</span>
+<span style="color: #B00040">int</span> <span style="color: #0000FF">main</span>(){
+    <span style="color: #408080; font-style: italic">/* Değişken tanımlama */</span>
+    <span style="color: #408080; font-style: italic">// karakter türünde değişken tanımla</span>
+    <span style="color: #B00040">char</span> harf;
+    <span style="color: #408080; font-style: italic">// küçük tamsayı türünde değişken tanımlama</span>
+    <span style="color: #B00040">short</span> yas;
+    <span style="color: #408080; font-style: italic">// tamsayı türünde değişken tanımlama</span>
+    <span style="color: #B00040">int</span> dogum_tarihi;
+    <span style="color: #408080; font-style: italic">// büyük tamsayı türünde değişken tanımlama</span>
+    <span style="color: #B00040">long</span> tc_no;
+    <span style="color: #408080; font-style: italic">// küçük ondalıklı sayı türünde değişken tanımlama</span>
+    <span style="color: #B00040">float</span> boy;
+    <span style="color: #408080; font-style: italic">// büyük ondalıklı sayı türünde değişken tanımlama</span>
+    <span style="color: #B00040">double</span> bakiye;
+
+    <span style="color: #408080; font-style: italic">/* Değişkene değer verme (atama) */</span>
+    harf <span style="color: #666666">=</span> <span style="color: #BA2121">&#39;E&#39;</span>;
+    yas<span style="color: #666666">=</span> <span style="color: #666666">29</span>;
+    dogum_tarihi<span style="color: #666666">=</span> <span style="color: #666666">1987</span>;
+    tc_no<span style="color: #666666">=19123454209</span>;
+    boy<span style="color: #666666">=1.83f</span>;
+    bakiye<span style="color: #666666">=1000000.45</span>d;
+}
+</pre></div>
+
+				</div>				
+				<div class="result">
+					<h3> Ekran Çıktısı</h3>
+					<pre> 				
+					<p>
+
+					</p>
+					</pre> 
+				</div>
+			</div> 			
+			
+<button class="accordion">Format Belirleyicileri</button>
+			<div class="panel">
+				<div class="problem_tanimi">	
+					<h3> Problem Tanımı </h3>				
+					<p> Farklı Veri Türleri ve Değer Aralıklarını Ekrana Yazdırma </p>
+				</div>
+				<div class="code">
+					<h3> C Kodu </h3>
+
+				</div>				
+				<div class="result">
+					<h3> Ekran Çıktısı</h3>
+					<pre> 				
+					<p>
+
+					</p>
+					</pre> 
+				</div>
 			</div>      
-		</div>
-	</div>
 
-
-
-
-
-
-
-
-
-
+		
+			
 
 	<div id="ayak">
 	</div>
