--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -176,7 +176,7 @@ Merkez\YALOVA </p>
 				</div>
 			</div> 			
 			
-<button class="accordion">Format Belirleyicileri</button>
+<button class="accordion">4.Format Belirleyicileri</button>
 			<div class="panel">
 				<div class="problem_tanimi">	
 					<h3> Problem Tanımı </h3>				
