--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   </div>
 </div>
 <div id="bos_satir">
-    <hr>
+<p></p>
 </div>
+
 <div id="ayak">
   <h1> İletişim </h1> 
   <p>
@@ -30,5 +31,14 @@
     Yalova, Türkiye
   </p>  
 </div>
+
+<div> 
+<h1> Ofis Saatleri </h1>
+
+<img src="ofis_saatleri.png" />
+</div>
+
+
+
 </body>
 </html>
