--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -12,25 +12,21 @@
 		<div class="left">
 			<div id="kaynaklar">
 			<h2>
-				<a href="https://www.youtube.com/watch?v=oeIq0Nmzy6Y" target="_new"> CodeBlocks İndirme ve Kurulumu</a>
+				<a href="https://www.youtube.com/watch?v=oeIq0Nmzy6Y" target="_blank"> CodeBlocks İndirme ve Kurulumu</a>
 			</h2>
 			<h2>Yararlanabileceğiniz Kaynaklar</h2>
 			<h3> Web Siteleri Türkçe</h3>
-			<p>
 				<ul>
-					<li><a href="http://www.cagataycebi.com/programming/" target="_new"> C Dili Dersleri (Çağatay Çebi) </a></li>
-					<li><a href="https://www.youtube.com/playlist?list=PLfzhcDNz4tlXOvEE7z_u3gEqFO3nwIZ5i" target="_new"> C Dili Dersleri (Volkan Kılıç) </a></li>
-					<li><a href="https://www.youtube.com/watch?v=TNGv84fufNk" target="_new"> CodeBlocks ile Çeşitli Örnekler </a></li>				
+					<li><a href="http://www.cagataycebi.com/programming/" target="_blank"> C Dili Dersleri (Çağatay Çebi) </a></li>
+					<li><a href="https://www.youtube.com/playlist?list=PLfzhcDNz4tlXOvEE7z_u3gEqFO3nwIZ5i" target="_blank"> C Dili Dersleri (Volkan Kılıç) </a></li>
+					<li><a href="https://www.youtube.com/watch?v=TNGv84fufNk" target="_blank"> CodeBlocks ile Çeşitli Örnekler </a></li>				
 				</ul>
-			</p>
 			<h3> Web Siteleri İngilizce</h3>
-			<p>
 				<ul>
-					<li><a href="http://www.learn-c.org/" target="_new"> Learn C </a></li>
-					<li><a href="https://www.tutorialspoint.com/cprogramming/index.htm" target="_new"> Tutorials Point </a></li>
-					<li><a href="http://www.cprogramming.com/tutorial/c-tutorial.html" target="_new"> C Programming </a></li>		
+					<li><a href="http://www.learn-c.org/" target="_blank"> Learn C </a></li>
+					<li><a href="https://www.tutorialspoint.com/cprogramming/index.htm" target="_blank"> Tutorials Point </a></li>
+					<li><a href="http://www.cprogramming.com/tutorial/c-tutorial.html" target="_blank"> C Programming </a></li>		
 				</ul>
-			</p>
 
 			<h3> İngilizce Kitap</h3>
 			<p>The C Programming Language 2nd Edition. Brian W. Kernighan, Dennis M. Ritchie</p>
@@ -40,7 +36,7 @@
 		<div class="right">
 			<div style="border:1px solid #39c; width:304px;">
 			<img src="dennis_ritchie.jpg" alt="Dennis M. Ritchie" style="width:304px;height:300px;">
-			<h4>&nbsp;C Dili Yazarı <a href="https://en.wikipedia.org/wiki/Dennis_Ritchie" target="_new">Dennis M. Ritchie</a></h4>
+			<h4>&nbsp;C Dili Yazarı <a href="https://en.wikipedia.org/wiki/Dennis_Ritchie" target="_blank">Dennis M. Ritchie</a></h4>
 			</div>
 		</div>
 		<div class="ornekler">
@@ -75,7 +71,7 @@
 				<div class="result">
 					<h3> Ekran Çıktısı</h3>
 					<pre> 				
-					<p> Merhaba Dunya </p>
+					 Merhaba Dunya 
 					</pre> 
 				</div>
 			</div>
@@ -112,14 +108,14 @@
 				<div class="result">
 					<h3> Ekran Çıktısı</h3>
 					<pre> 				
-					<p>Merhaba
+					Merhaba
 Dunya
 Islem bitti
 Merhaba		Dunya
 Merhaba "Dunya"
 Merhaba, Nasilsin?
 Merhaba, 'Dunya'
-Merkez\YALOVA </p>
+Merkez\YALOVA 
 					</pre> 
 				</div>
 			</div>   
@@ -169,9 +165,7 @@ Merkez\YALOVA </p>
 				<div class="result">
 					<h3> Ekran Çıktısı</h3>
 					<pre> 				
-					<p>
 
-					</p>
 					</pre> 
 				</div>
 			</div> 			
@@ -189,9 +183,7 @@ Merkez\YALOVA </p>
 				<div class="result">
 					<h3> Ekran Çıktısı</h3>
 					<pre> 				
-					<p>
 
-					</p>
 					</pre> 
 				</div>
 			</div>      
