--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -189,10 +189,13 @@ Merkez\YALOVA
 			</div>      
 
 		
-			
+</div>		
+
+</div>
 
 	<div id="ayak">
 	</div>
+
 	<!-- Akordeon Menu -->
 	<script>
 		var acc = document.getElementsByClassName("accordion");
