--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
 </div>
 
 <div> 
-<h1> Ofis Saatleri </h1>
-
-<img src="ofis_saatleri.png" />
+	<h1> Ofis Saatleri </h1>
+	<img src="ofis_saatleri.png" alt="Ofis Saatleri" />
 </div>
 
 
