--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -11,6 +11,11 @@
 	<div id="govde">
 		<div class="left">
 			<div id="kaynaklar">
+			
+			<h2> 
+			<a href="https://piazza.com/class/iu897e5s80b5mz" target="_blank"> Soru ve Cevap Platformu (Piazza) </a> 
+			</h2>
+			
 			<h2>
 				<a href="https://www.youtube.com/watch?v=oeIq0Nmzy6Y" target="_blank"> CodeBlocks İndirme ve Kurulumu</a>
 			</h2>
