--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -53,6 +53,7 @@
 					<p> Ekrana <strong>Merhaba Dunya</strong> yazdırmak</p>
 				</div>
 				<div class="code">
+				<h3> C Kodu </h3>
 <!-- HTML generated using hilite.me --><div style="background: #f8f8f8; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #408080; font-style: italic">/* Yorumlarınızı buraya yazabilirsiniz</span>
 
 <span style="color: #408080; font-style: italic">   h uzantılı dosyalar başlık(header) dosyalarıdır.</span>
