--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -332,6 +332,7 @@ Fiyat: 700000000000.00 TL
 </div>
 
 	<div id="ayak">
+	<h2> Son Güncellenme Tarihi : 25 Ekim 2016 Saat 16:38 </h2>
 	</div>
 
 	<!-- Akordeon Menu -->
