--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 	<img src="ofis_saatleri.png" alt="Ofis Saatleri" />
 </div>
 
-
+<div> 
+	<h2> Son Güncellenme Tarihi : 25 Ekim 2016 Saat 16:38 </h2>
+</div>
 
 </body>
 </html>
