--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <div> 
-	<h2> Son Güncellenme Tarihi : 25 Ekim 2016 Saat 16:38 </h2>
+	<h2> Son Güncellenme Tarihi : 2 Kasım 2016 Saat 11:24 </h2>
 </div>
 
 </body>
