--- a/bilg_prog_giris.html
+++ b/bilg_prog_giris.html
@@ -433,7 +433,7 @@ Ogrenci numaraniz 2009878907 dir
 </div>
 
 	<div id="ayak">
-	<h2> Son Güncellenme Tarihi : 25 Ekim 2016 Saat 16:38 </h2>
+	<h2> Son Güncellenme Tarihi : 2 Kasım 2016 Saat 11:24 </h2>
 	</div>
 
 	<!-- Akordeon Menu -->
